--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
           <img class = "newappIcon" src="images/newapp-icon.png">
         </td>
         <td>
-          <h1>Hello world!</h1>
+          <h1>Hello world! Created by Vinícius Ribeiro</h1>
+          <h2>Teste de Deploy com Toolchain</h2>
         </td>
       </tr>
     </table>
